--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,8 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.development.local
-.env.test.local
+.env.test
+.env.development
 .env.production.local
 .env.local
 
@@ -128,3 +129,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
