--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "start-dev": "npx nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev": "cross-env NODE_ENV=development npx nodemon",
     "seed": "npx ts-node ./src/util/dataSeeder.ts",
-    "lint": "npx eslint"
+    "lint": "npx eslint",
+    "testdb": "cross-env NODE_ENV=test npx ts-node ./src/index.ts",
+    "test": " npx playwright test --reporter=list"
   },
   "repository": {
     "type": "git",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@faker-js/faker": "^9.6.0",
+    "@playwright/test": "^1.51.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
